Acrescentando valor das vendas

--- a/vendas.html
+++ b/vendas.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>Document</title>
 </head>
-    <h1>Página de Vendas</h1>
+    <h1>Vendas</h1>
+    
+    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar para página Home</a>
 </html>
